<resources>
	<string name="app_name">Soosoft registration wizard</string>

	<!-- start fragment -->
	<string name="str_tv_start_info">Welcome to the registration process of your very own</string>
	<string name="str_tv_start_info2">account. \n\nPerform a rotating motion with two fingers to continue.</string>

	<!-- first name fragment -->
	<string name="str_firstNameInfo">Please input your name below:</string>
	<string name="str_firstName_sbInfo">Letters: %d</string>
	<string name="str_tv_firstName_value">The name is %s.</string>

	<!-- phone number fragment -->
	<string name="str_tv_phoneNumber_info">please input phone number:</string>
	<string name="str_tv_phoneNumber_sliderValue">Phone number = 0%1$d%2$d</string>

	<!-- last name fragment -->
	<string name="str_tv_lastName_info">input secure last name:</string>
	<string name="str_et_lastName_inputTv_nameInput">secure last name</string>
	<string name="str_tv_lastName_regexDisplay">
        \n
        Between 12 and 14 characters \n
        At least one lowercase letter \n
        At least one uppercase letter \n
        At least one number \n
        At least one special character (@$!%*?&amp;) \n
        At least one space
    </string>

	<!-- age fragment -->
	<string name="str_tv_age_info">Please input your age:</string>
	<string name="str_tv_age_value">%d</string>
	<string name="str_age_instruction">Shake to change</string>

	<!-- birthday fragment -->
	<string name="str_tv_birthday_info">
		Please input birthday: \n
		%d%s of %s
	</string>
	<string name="str_et_birthday_info">day (eg twenty one) here</string>

	<!-- end Fragment -->
	<string name="str_tv_end_info">Congratulations! You\'ve entered the following data:</string>
	<string name="str_tv_end_val">
        First name: %s\
        Phone number: %s\n
        Last name: %s\n
        Age: %s\n
        Birthday: %s\n
    </string>
	<string name="str_tv_end_time">This took you %d%s.</string>
</resources>
