<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/frameLayout7"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".EndFragment">

	<TextView
		android:id="@+id/tv_end_vals"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/str_tv_end_val"
		android:textAlignment="center"
		android:textColor="@color/colorPrimary"
		android:textSize="24sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/tv_end_time"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/str_tv_end_time"
		android:textColor="@color/colorAccent4"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tv_end_vals" />

	<TextView
		android:id="@+id/tv_end_info"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="24dp"
		android:layout_marginEnd="24dp"
		android:text="@string/str_tv_end_info"
		android:textSize="24sp"
		app:layout_constraintBottom_toTopOf="@+id/tv_end_vals"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>