<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgeFragment">

    <TextView
        android:id="@+id/tv_age_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_tv_age_info"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/tv_age_valView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_tv_age_value"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_age_instruction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_age_info"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/tv_age_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_age_instruction"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_age_info"
        app:layout_constraintVertical_bias="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>